# garaga-zero

./: .gitignore  .pre-commit-config.yaml  .secrets.template  Cargo.toml  Makefile  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: fustat.yml
garaga_zero_src/precompiled_circuits/: all_circuits.py
garaga_zero_src/src/: definitions.cairo  ec_ops.cairo  hash_to_field.cairo  modulo_circuit.cairo  sha.cairo  test_utils.cairo  utils.cairo
garaga_zero_src/src/bls12_381/: final_exp.cairo  multi_pairing_1.cairo  multi_pairing_2.cairo  multi_pairing_3.cairo  multi_pairing_check_2.cairo  multi_pairing_check_3.cairo
garaga_zero_src/src/bn254/: final_exp.cairo  multi_pairing_1.cairo  multi_pairing_2.cairo  multi_pairing_3.cairo  multi_pairing_check_2.cairo  multi_pairing_check_3.cairo
garaga_zero_src/src/precompiled_circuits/: dummy.cairo  ec.cairo  final_exp_part_1_bls12_381.cairo  final_exp_part_1_bn254.cairo  final_exp_part_2_bls12_381.cairo  final_exp_part_2_bn254.cairo  fp12_mul_bls12_381.cairo  fp12_mul_bn254.cairo  multi_miller_loop_bls12_381_1.cairo  multi_miller_loop_bls12_381_2.cairo  multi_miller_loop_bls12_381_3.cairo  multi_miller_loop_bn254_1.cairo  multi_miller_loop_bn254_2.cairo  multi_miller_loop_bn254_3.cairo  multi_pairing_check_bls12_381_2.cairo  multi_pairing_check_bls12_381_3.cairo  multi_pairing_check_bn254_2.cairo  multi_pairing_check_bn254_3.cairo
hints/: modulo_circuit.py  modulo_circuit.rs
hints/python_wrapper/: circuits.py
hints/rust-vm/: Cargo.toml
hints/rust-vm/example/: README.md  error.rs  hint_processor.rs  main.rs
hints/rust-vm/example/cairo/: main.cairo
hints/rust-vm/src/: basic_field_ops.rs  circuits.rs  debug.rs  error.rs  hash_to_curve.rs  lib.rs  modulo_circuit.rs  sha256.rs  types.rs  utils.rs
precompiled_circuits/: all_circuits.py
precompiled_circuits/compilable_circuits/: fustat_only.py
src/: basic_field_ops.cairo  debug.cairo  definitions.cairo  ec_ops.cairo  hash_to_curve.cairo  hash_to_field.cairo  modulo_circuit.cairo  sha.cairo  utils.cairo
src/bls12_381/: final_exp.cairo  multi_pairing_2.cairo  multi_pairing_3.cairo  multi_pairing_check_2.cairo
src/bn254/: final_exp.cairo  multi_pairing_2.cairo
src/garaga_zero/: definitions.cairo  ec_ops.cairo  hash_to_field.cairo  modulo_circuit.cairo  sha.cairo  test_utils.cairo  utils.cairo
src/garaga_zero/bls12_381/: final_exp.cairo  multi_pairing_1.cairo  multi_pairing_2.cairo  multi_pairing_3.cairo  multi_pairing_check_2.cairo  multi_pairing_check_3.cairo
src/garaga_zero/bn254/: final_exp.cairo  multi_pairing_1.cairo  multi_pairing_2.cairo  multi_pairing_3.cairo  multi_pairing_check_2.cairo  multi_pairing_check_3.cairo
src/garaga_zero/precompiled_circuits/: dummy.cairo  ec.cairo  final_exp_part_1_bls12_381.cairo  final_exp_part_1_bn254.cairo  final_exp_part_2_bls12_381.cairo  final_exp_part_2_bn254.cairo  fp12_mul_bls12_381.cairo  fp12_mul_bn254.cairo  multi_miller_loop_bls12_381_1.cairo  multi_miller_loop_bls12_381_2.cairo  multi_miller_loop_bls12_381_3.cairo  multi_miller_loop_bn254_1.cairo  multi_miller_loop_bn254_2.cairo  multi_miller_loop_bn254_3.cairo  multi_pairing_check_bls12_381_2.cairo  multi_pairing_check_bls12_381_3.cairo  multi_pairing_check_bn254_2.cairo  multi_pairing_check_bn254_3.cairo
src/precompiled_circuits/: all_circuits.py  cofactor_clearing.cairo  demo_modulo_circuit_bls12_381.cairo  demo_modulo_circuit_bn254.cairo  dummy.cairo  ec.cairo  final_exp_part_1_bn254.cairo  final_exp_part_2_bn254.cairo  fp12_mul_bls12_381.cairo  fp12_mul_bn254.cairo  isogeny_g2.cairo  isogeny_g2_bls12_381.cairo  map_to_curve_g2.cairo  multi_miller_loop.cairo  multi_miller_loop_bn254_3.cairo  multi_pairing_check.cairo  multi_pairing_check_bls12_381_3.cairo  multi_pairing_check_bn254_2.cairo  multi_pairing_check_bn254_3.cairo  utils.cairo
tests/: gen_inputs.py
tests/fustat_programs/: derive_ec_point.cairo  dummy_test.cairo  extf_circuit.cairo  msm_ecip.cairo  neg_3.cairo  sample_groth16_input.json  test_basic_field_ops.cairo  test_final_exp_bls.cairo  test_final_exp_bn.cairo  test_fustat.py  test_hash_to_curve.cairo  test_hash_to_curve_input.json  test_hash_to_field.cairo  test_hash_to_field_input.json  test_mp_bls_1.cairo  test_mp_bls_2.cairo  test_mp_bls_3.cairo  test_mp_bn_1.cairo  test_mp_bn_2.cairo  test_mp_bn_3.cairo  test_mpc_bls_2.cairo  test_mpc_bls_3.cairo  test_mpc_bn_2.cairo  test_mpc_bn_3.cairo  test_sha256.cairo
tools/make/: build.sh  ci_fustat.yml  extension_field_modulo_circuit.patch  extension_field_modulo_circuit_new.py  format.sh  format_cairo_files.sh  fustat_format_check.sh  launch_cairo_files.py  requirements.txt  setup.sh
