[package]
name = "garaga-zero-hints"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", tag = "v2.0.0-rc4", features = ["extensive_hints", "clap", "cairo-1-hints", "mod_builtin"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = "1.0.215"
serde_json = "1.0.132"
