[package]
name = "garaga-zero-hints"
version = "0.1.0"
edition = "2021"

[lib]
name = "garaga_zero_hints"
path = "src/lib.rs"

[[bin]]
name = "garaga-zero-example"
path = "example/main.rs"

[dependencies]
pyo3.workspace = true
cairo-vm.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ark-ff.workspace = true
ark-bls12-381.workspace = true
hex.workspace = true
